Update and rename 书签.html to book.html

--- a/book.html
+++ b/book.html
@@ -105,11 +105,7 @@
 		<hr>
 		<h3>自制网页</h3>
 		<hr>
-		<a href = '书签.html' target="_blank"><button>书签</button></a>
-		<a href = '个人介绍.html' target="_blank"><button>个人介绍</button></a>
-		<a href = '懒人听书.html' target="_blank"><button>懒人听书</button></a>
-		<a href = '模板.html' target="_blank"><button>模板</button></a>
-		<a href = '樱花动漫.html' target="_blank"><button>樱花动漫</button></a>
+		<a href = 'https://jiwu-han.github.io/jiwu/Personal introduction.html' target="_blank"><button>关于作者</button></a>
 		<hr>
 	</body>
 </html>
