--- a/book.html
+++ b/book.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>快捷书签</title>
-		<link rel="shortcut icon" href="../logo/分类.png">
+		<link rel="shortcut icon" href="https://jiwu-han.github.io/jiwu/logo.png">
 		<style>
 			body{
 				background-color:Gainsboro;
