--- a/book.html
+++ b/book.html
@@ -64,6 +64,8 @@
 		<a href = 'http://sc.adminbuy.cn/' target='blank'><button>HTNL 图标</button></a>
 		<a href = 'https://encycolorpedia.cn/' target='blank'><button>颜色巡查</button></a>
 		<hr>
+		<a href = 'https://github.com/jiwu-han/' target='blank'><button>github</button></a>
+		<hr>
 		<h5>编程 博客</h5>
 		<a href = 'https://blog.csdn.net/' target="_blank"><button>CSDN博客</button></a>
 		<a href = 'https://www.zhihu.com/' target="_blank"><button>知乎</button></a>
