--- a/book.html
+++ b/book.html
@@ -106,6 +106,7 @@
 		<h3>自制网页</h3>
 		<hr>
 		<a href = 'https://jiwu-han.github.io/jiwu/Personal introduction.html' target="_blank"><button>关于作者</button></a>
+		<a href = 'https://jiwu-han.github.io/jiwu/waterfall.html' target="_blank"><button>代码瀑布</button></a>
 		<hr>
 	</body>
 </html>
