--- a/book.html
+++ b/book.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8"/>
@@ -6,8 +6,15 @@
 		<link rel="shortcut icon" href="https://jiwu-han.github.io/jiwu/logo.png">
 		<style>
 			body{
-				background-color:Gainsboro;
+				/*background-color:Gainsboro;*/
+				background-color:#fff2f2;
 				/*font-size:12px;*/
+			}
+			button{
+				background: #FFF;
+				border-radius: 15px;
+				border: 1px solid #FFF;
+				padding: 5px 10px;
 			}
 		</style>
 	</head>
